# Dice-Rangers

./: .gitignore  Makefile  README.md  pyproject.toml
.maestro/: Dockerfile  MAESTRO.md  knowledge.dot  scan_markers.sh
.maestro/maintenance-reports/: knowledge-node-status-assessment.md  todo-fixme-scan.md
dice_rangers/: __main__.py  app.py  audio.py  board.py  constants.py  customizer.py  dice.py  events.py  game.py  items.py  renderer.py  ui.py  units.py
dice_rangers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_board.py  test_customizer.py  test_dice.py  test_events.py  test_game.py  test_items.py  test_renderer.py  test_ui.py  test_units.py
